catkin_ws/logs/iq_gnc/build.make.485.log.stderr
In file included from /home/mario/catkin_ws/src/mavros/mavros/include/mavros/utils.h:22,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:29,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/mavros/mavros_msgs/include/mavros_msgs/mavlink_convert.h: In function ‘bool mavros_msgs::mavlink::convert(const Mavlink&, mavlink::mavlink_message_t&)’:
/home/mario/catkin_ws/src/mavros/mavros_msgs/include/mavros_msgs/mavlink_convert.h:74:63: warning: taking address of packed member of ‘mavlink::__mavlink_message’ may result in an unaligned pointer value [-Waddress-of-packed-member]
   74 |  std::copy(rmsg.payload64.begin(), rmsg.payload64.end(), mmsg.payload64);
      |                                                          ~~~~~^~~~~~~~~
In file included from /home/mario/catkin_ws/src/mavros/mavros/include/mavros/utils.h:22,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:29,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/mavros/mavros_msgs/include/mavros_msgs/mavlink_convert.h: In function ‘bool mavros_msgs::mavlink::convert(const mavlink_message_t&, mavros_msgs::Mavlink&, uint8_t)’:
/home/mario/catkin_ws/src/mavros/mavros_msgs/include/mavros_msgs/mavlink_convert.h:108:62: warning: taking address of packed member of ‘mavlink::__mavlink_message’ may result in an unaligned pointer value [-Waddress-of-packed-member]
  108 |  rmsg.payload64 = mavros_msgs::Mavlink::_payload64_type(mmsg.payload64, mmsg.payload64 + payload64_len);
      |                                                         ~~~~~^~~~~~~~~
In file included from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp: In function ‘void set_linear_accel(float, float, float)’:
/home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:671:2: error: ‘accel_cb’ was not declared in this scope; did you mean ‘accel_pub’?
  671 |  accel_cb(accel);
      |  ^~~~~~~~
      |  accel_pub
In file included from /opt/ros/noetic/include/ros/ros.h:40,
                 from /home/mario/catkin_ws/src/iq_gnc/include/gnc_functions.hpp:16,
                 from /home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:3:
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp: In function ‘void drone1_gpsSub_cb(const ConstPtr&)’:
/opt/ros/noetic/include/ros/console.h:351:176: warning: format not a string literal and no format arguments [-Wformat-security]
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                                ^
/opt/ros/noetic/include/ros/console.h:354:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  354 |     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(NULL, __VA_ARGS__)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:220:5: note: in expansion of macro ‘ROS_INFO’
  220 |     ROS_INFO((ros_namespace_l).c_str());
      |     ^~~~~~~~
/opt/ros/noetic/include/ros/console.h:351:176: warning: format not a string literal and no format arguments [-Wformat-security]
  351 |     ::ros::console::print(filter, __rosconsole_define_location__loc.logger_, __rosconsole_define_location__loc.level_, __FILE__, __LINE__, __ROSCONSOLE_FUNCTION__, __VA_ARGS__)
      |                                                                                                                                                                                ^
/opt/ros/noetic/include/ros/console.h:354:5: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER’
  354 |     ROSCONSOLE_PRINT_AT_LOCATION_WITH_FILTER(NULL, __VA_ARGS__)
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:390:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_AT_LOCATION’
  390 |       ROSCONSOLE_PRINT_AT_LOCATION(__VA_ARGS__); \
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/ros/noetic/include/ros/console.h:575:35: note: in expansion of macro ‘ROS_LOG_COND’
  575 | #define ROS_LOG(level, name, ...) ROS_LOG_COND(true, level, name, __VA_ARGS__)
      |                                   ^~~~~~~~~~~~
/opt/ros/noetic/include/rosconsole/macros_generated.h:110:23: note: in expansion of macro ‘ROS_LOG’
  110 | #define ROS_INFO(...) ROS_LOG(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, __VA_ARGS__)
      |                       ^~~~~~~
/home/mario/catkin_ws/src/iq_gnc/src/follower_sub.cpp:224:5: note: in expansion of macro ‘ROS_INFO’
  224 |     ROS_INFO((ros_namespace_l).c_str());
      |     ^~~~~~~~
make[2]: *** [CMakeFiles/follower_sub.dir/build.make:63: CMakeFiles/follower_sub.dir/src/follower_sub.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1804: CMakeFiles/follower_sub.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
